# i21y

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
docs/: conf.py  i21y.loaders.rst  i21y.rst  index.rst  modules.rst  usage.md
docs/_static/: main.js
i21y/: __init__.py  abc.py  error.py  translator.py  utils.py
i21y/loaders/: file_.py  json.py  yaml.py
src/: __init__.py  loader.py  translator.py  utils.py
src/i21y/: __init__.py  abc.py  error.py  translator.py  utils.py
src/i21y/loaders/: file_.py  json.py  yaml.py
tests/: test_general.py  test_locale_str.py  test_yaml.py
tests/locale/en/: general.json  main.yml
tests/locale/en/wow/: a.json
tests/locale/ja/: general.json  main.yaml
tests/locale/ja/wow/: a.json
