[project]
name = "i21y"
description = "The simple library for i18n support."
authors = [
    { name = "Takagi Tasuku", email = "tasuren@outlook.jp" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["i18n"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Internationalization",
    "Typing :: Typed"
]
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
yaml = ["pyyaml~=6.0"]
fast_json = ["orjson~=3.10"]

[tool.uv]
dev-dependencies = [
    "myst-parser>=4.0.0",
    "pytest>=8.3.3",
    "sphinx>=8.1.2",
    "sphinx-intl>=2.2.0",
    "ruff>=0.6.9",
]

[project.urls]
Source = "https://github.com/tasuren/i21y"
Documentation = "https://i21y.readthedocs.io/"
Donate = "https://www.buymeacoffee.com/tasuren"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/i21y/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/i21y"]
