[project]
name = "i21y"
description = "The simple library for i18n support."
authors = [
    { name = "Takagi Tasuku", email = "tasuren@outlook.jp" },
]
readme = "README.md"
license = "MIT"
keywords = ["i18n"]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Internationalization",
    "Typing :: Typed"
]
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[dependency-groups]
dev = [
    "myst-parser>=5.0.0",
    "pytest>=9.0.2",
    "sphinx>=9.0.4",
    "sphinx-intl>=2.3.2",
    "ruff>=0.14.14",
]

[project.optional-dependencies]
yaml = ["pyyaml~=6.0"]
fast_json = ["orjson~=3.11.6"]

[project.urls]
Source = "https://github.com/tasuren/i21y"
Documentation = "https://i21y.readthedocs.io/"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/i21y/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/i21y"]
